[package]
name = "aaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serenity]
git = "https://github.com/WinLinux1028/serenity.git"
branch = "add_msg_to_cache"
default-features = false
features = [
    "builder",
    "cache",
    "collector",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "temp_cache",
    "rustls_backend",
    "chrono",
]

[dependencies.tokio]
version = "1"
features = ["full"]